pxc/tests/test_011_foreach/fe_arr2.px
public namespace fe_arr2;
import core::common -;


int z;
for (int i, string mutable& s : z) { // error
}

